fix: hint being overlapped by other ui elements

--- a/frontend/components/sidebar.css
+++ b/frontend/components/sidebar.css
@@ -1,3 +1,4 @@
+/* VSCode like sidebar */
 
 .sidebar-button {
     width: 45px;
@@ -32,6 +33,7 @@
     transition: opacity 0.2s ease 0s;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 1000;
 }
 
 .sidebar-button.active-button::before {
